--- a/src/Kooco.Pikachu.Domain.Shared/Localization/PageLayout/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/PageLayout/en.json
@@ -10,14 +10,14 @@
     "TenantWallet:Balance": "Balance",
     "TenantWallet:Remark": "Remark",
     "TenantWallet:EnterAmount": "Enter Amount",
-    "TenantWallet:RechargeAmount": "Recharge Amount",
+    "TenantWallet:RechargeAmount": "Recharge",
     "TenantWallet:RechargeAmountOfStored": "Recharge Amount",
     "TenantWallet:InputRechargeReminder": "Please enter a multiple of {0}",
-    "TenantWallet:DeductionAmount": "Deduction Amount",
+    "TenantWallet:DeductionAmount": "Deduct",
     "TenantWallet:DeductionAmountOfStored": "Deduction Amount",
     "TenantWallet:InputDeductionReminder": "Please enter the amount to be deducted",
     "TenantWallet:ConfirmRecharge": "Recharge",
-    "TenantWallet:ConfirmDeduction": "Deduction",
+    "TenantWallet:ConfirmDeduction": "Deduct",
     "TenantWallet:LowBalanceAlert": "Insufficient balance, cannot deduct money.",
     "TenantWallet:EmailNotification": "Email Notification",
     "TenantWallet:TextMessageNotification": "Text Message Notification",
