#PK-1925 Exchange logic updates

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -2220,10 +2220,10 @@
     "CODPaymentMethod": "COD Payment Method",
     "TransactionStatus.Completed": "Complete",
     "TransactionStatus.Pending": "Pending",
-    "TransactionStatus.Failed": "Failed"
-
-
-
-
+    "TransactionStatus.Failed": "Failed",
+    "ReplacementItem": "Replacement Item",
+    "ChooseReplacement": "Choose Replacement",
+    "SelectedQuantity": "Selected Quantity",
+    "PleaseSelectReplacementItems": "Please select replacement items and verify replacement quantity is greater than 0"
   }
 }
