#PK-1925 Exchange updates

--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -2224,6 +2224,6 @@
     "ReplacementItem": "Replacement Item",
     "ChooseReplacement": "Choose Replacement",
     "SelectedQuantity": "Selected Quantity",
-    "PleaseSelectReplacementItems": "Please select replacement items and verify replacement quantity is greater than 0"
+    "PleaseSelectReplacementItems": "Please select replacement items and verify replacement quantity is greater than 0 and replacement amount is not in negative"
   }
 }
