--- a/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
+++ b/src/Kooco.Pikachu.Domain.Shared/Localization/Pikachu/en.json
@@ -2224,6 +2224,8 @@
     "ReplacementItem": "Replacement Item",
     "ChooseReplacement": "Choose Replacement",
     "SelectedQuantity": "Selected Quantity",
-    "PleaseSelectReplacementItems": "Please select replacement items and verify replacement quantity is greater than 0 and replacement amount is not in negative"
+    "PleaseSelectReplacementItems": "Please select replacement items and verify replacement quantity is greater than 0 and replacement amount is not in negative",
+    "LogisticsOrderNumber": "Logistics Order Number",
+    "ShipmentNumber": "Shipment Number"
   }
 }
